<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/font_diet"
        android:text="@string/Date"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="111dp"
            android:layout_height="174dp"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/diet_image"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/cardview_dark_background"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/diet_imageButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D8D4D4"
                android:src="@drawable/camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_diet"
                    android:layout_weight="1"
                    android:text="@string/WeightUI"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/diet_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:autofillHints="@android:string/cut"
                    style="?android:listSeparatorTextViewStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_diet"
                    android:text="@string/kgUI"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/water_plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/water_plus" />

                <TextView
                    android:id="@+id/water_cups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/water"
                    android:fontFamily="@font/font_diet"
                    android:text="@string/WaterCups"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/water_minusButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/water_minus" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/beige"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_diet"
                android:text="@string/MEAL"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/diet_meal"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_diet"
                android:textSize="15sp"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/beige">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_diet"
                android:text="@string/EXERCISE"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/diet_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_diet"
                android:textSize="15sp"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/MoodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Mood1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/happy_icon"
            android:fontFamily="@font/font_diet"
            android:text="@string/happy"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/Mood2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/good"
            android:fontFamily="@font/font_diet"
            android:text="@string/good"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/Mood3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/average"
            android:fontFamily="@font/font_diet"
            android:text="@string/average"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/Mood4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/poor"
            android:fontFamily="@font/font_diet"
            android:text="@string/poor"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/Mood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/worst"
            android:fontFamily="@font/font_diet"
            android:text="@string/worst"
            android:textAlignment="center"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#494343"
        android:fontFamily="@font/font_diet"
        android:text="@string/REPORT"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#494343"
            android:fontFamily="@font/font_diet"
            android:text="@string/SAVE"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#494343"
            android:fontFamily="@font/font_diet"
            android:text="@string/DELETE"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>